<resources>

    <!-- TWITTER -->
    <string name="com.twitter.sdk.android.CONSUMER_KEY">5jZS19ffLeQWMQGNoeltOid1o</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">pqgysx4g3kpH7SxWQffF9cVFNmrymSBLgUb89Rt7JD6D8oE0EP</string>
    <string name="retweet_perc_label">Retweet ratio</string>
    <string name="retweet_dist_chart_title">Retweet distribution:</string>
    <string name="retweet_dist_chart_yaxis"># of retweets</string>


    <!-- FACEBOOK -->
    <string name="facebook_app_id">2114457778790375</string>
    <string name="fb_login_protocol_scheme">fb2114457778790375</string>
    <string name="login_fb">Login with Facebook</string>
    <string name="fb_stats">Recent Facebook Stats</string>
    <string name="fb_activities">Recent Facebook Activities</string>
    <string name="fb_photos">Last Month Photos</string>
    <string name="fb_videos">Last Month Videos</string>
    <string name="fb_places_title">Most Recent Tagged Places</string>
    <string name="fb_fitness_title">Shared Fitness Activities</string>
    <string name="fb_event_title">Most Recent Event</string>
    <string name="fb_pages_title">Pages liked during the last month</string>
    <string name="fb_likes_ratio">Likes ratio</string>
    <string name="fb_share_ratio">Share ratio</string>
    <string name="fb_likes_chart_title">Likes distribution:</string>
    <string name="fb_shares_chart_title">Share distribution:</string>
    <string name="fb_likes_chart_yaxis"># of likes</string>
    <string name="fb_share_chart_yaxis"># of shares</string>

    <string name="social_activity_title">Last month activity</string>
    <string name="tags_stats_title">Most recently used tags</string>
    <string name="retweet_stats_title">Recent Retweets Stats</string>
    <string name="best_retweeters">Best Retweeters</string>

    <!-- SETUP -->
    <string name="app_stats_title">APPS USAGE STATISTICS</string>
    <string name="app_stats_description">
        The application needs to read your apps usage statistics. Please, tap on the button to open
        the Settings page and give access to the requested permission.
    </string>
    <string name="permission_title">PERMISSIONS</string>
    <string name="permission_description">
        The application needs to access different information to model your situations.
        Please, give access to the requested permissions.
    </string>
    <string name="autostart_title">AUTOSTART</string>
    <string name="autostart_description">
        Some manufacturers (e.g., Huawei and Xiaomi) use additional security features that could
        affect the execution of background tasks. Please, tap on the button below to open the
        Settings page and give access to the requested permission.
    </string>


    <string name="instagram_login_title">Online Social Network Log-in</string>
    <string name="instagram_login_description">
        Please, perform the Facebook and/or Twitter log-in to allow the application to access your
        Social Network\'s information and model your social context.
    </string>

    <string name="instagram_login">Log-in with Instagram</string>
    <string name="accept">Accept</string>
    <string name="next">Next</string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="ignore_battery_opt">Ignore battery optimization</string>
    <string name="open_settings">Open settings</string>
    <string name="finish">Finish</string>

    <string name="splash_app_name1">MyDigital</string>
    <string name="splash_app_name2">Footprint</string>

    <string name="app_name">MyDigitalFootprint</string>
    <string name="ask_conf">
        {
            "logPath" : "MyDigitalFootprint",
            "remoteLoggerDest": \"http://mcampana.iit.cnr.it:4966/sensing/upload\",
            "zipperInterval" : 60,
            "maxLogSizeMb": 2,
            "probes" : [
                {
                    "name" : "HardwareInfoProbe",
                    "interval" : 3600,
                    "logFile": "hardware_info.csv"
                },
                {
                    "name": "MultimediaProbe",
                    "logFile": "multimedia.csv"
                },
                {
                    "name" : "WeatherProbe",
                    "interval" : 3600,
                    "unit" : 2,
                    "appId" : "84da1f0489af48796227b87443170b50",
                    "logFile" : "weather.csv"
                },
                {
                    "name" : "ActivityRecognitionProbe",
                    "updateInterval" : 60,
                    "logFile" : "activity.csv"
                },
                {
                    "name" : "AudioProbe",
                    "interval" : 60,
                    "logFile" : "audio.csv"
                },
                {
                    "name" : "BatteryProbe",
                    "interval" : 60,
                    "logFile" : "battery.csv"
                },
                {
                    "name" : "BluetoothConnProbe",
                    "logFile" : "bt_conn.csv"
                },
                {
                    "name" : "BluetoothScanProbe",
                    "interval" : 60,
                    "logFile" : "bt_scan.csv"
                },
                {
                    "name" : "CallsProbe",
                    "logFile" : "calls.csv"
                },
                {
                    "name" : "CellInfoProbe",
                    "interval" : 60,
                    "logFile" : "cells.csv"
                },
                {
                    "name" : "CurrentCalendarEventsProbe",
                    "interval" : 60,
                    "logFile" : "calendar_current_events.csv"
                },
                {
                    "name" : "DisplayProbe",
                    "interval" : 60,
                    "logFile" : "display.csv"
                },
                {
                    "name" : "EnvironmentSensorProbe",
                    "interval" : 60,
                    "logFile" : "environment_sensors.csv"
                },
                {
                    "name" : "MotionSensorsProbe",
                    "interval" : 60,
                    "logFile" : "motion_sensors.csv"
                },
                {
                    "name" : "PositionSensorProbe",
                    "interval" : 60,
                    "logFile" : "position_sensors.csv"
                },
                {
                    "name" : "InstalledAppsProbe",
                    "interval" : 3600,
                    "logFile" : "installed_apps.csv"
                },
                {
                    "name" : "LocationProbe",
                    "interval" : 300,
                    "logFile" : "location.csv"
                },
                {
                    "name" : "RunningApplicationsProbe",
                    "interval" : 300,
                    "logFile" : "running_apps.csv"
                },
                {
                    "name" : "AppsUsageProbe",
                    "interval" : 3600,
                    "logFile" : "apps_usage.csv"
                },
                {
                    "name" : "WiFiProbe",
                    "interval" : 240,
                    "logFile" : "wifi_scans.csv"
                },
                {
                    "name" : "WiFiP2PProbe",
                    "interval" : 120,
                    "startDelay" : 120,
                    "logFile" : "wifi_p2p_scans.csv"
                },
                {
                    "name" : "SmsProbe",
                    "logFile" : "sms.csv"
                }
            ]
        }
    </string>
</resources>
