<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:id="@+id/fb_stats_card">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fb_chart_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/fb_stats"
            android:padding="5dp"
            android:textColor="@color/light"
            android:fontFamily="@font/raleway_medium"/>

        <RelativeLayout
            android:id="@+id/fb_stats_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_below="@id/fb_chart_title">

            <LinearLayout
                android:id="@+id/fb_perc_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/fb_likes_perc_container"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/fb_share_perc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0%"
                        android:textSize="35sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/fb_share_perc"
                        android:text="@string/fb_share_ratio"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginTop="5dp"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/fb_share_perc_container"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/fb_likes_perc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0%"
                        android:textSize="35sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/fb_likes_perc"
                        android:text="@string/fb_likes_ratio"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginTop="5dp"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fb_perc_container">

                <TextView
                    android:id="@+id/fb_share_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fb_shares_chart_title"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fb_share_chart_yaxis"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="100dp"
                    android:layout_marginStart="-10dp"
                    android:gravity="center"
                    android:rotation="270"
                    android:layout_below="@id/fb_share_title"/>

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/fb_share_chart"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@id/fb_share_title"/>

                <TextView
                    android:id="@+id/fb_likes_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fb_likes_chart_title"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_below="@id/fb_share_chart"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fb_likes_chart_yaxis"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="100dp"
                    android:layout_marginStart="-10dp"
                    android:gravity="center"
                    android:rotation="270"
                    android:layout_below="@id/fb_likes_title"/>

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/fb_likes_chart"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@id/fb_likes_title"/>

            </RelativeLayout>

        </RelativeLayout>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/fb_stats_avi"
            android:layout_width="50dp"
            android:layout_height="50dp"
            style="@style/AVLoadingIndicatorView"
            android:visibility="visible"
            app:indicatorName="BallPulseIndicator"
            android:layout_centerInParent="true"
            app:indicatorColor="@color/colorPrimaryDark"/>


    </RelativeLayout>

</android.support.v7.widget.CardView>