<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/twitter_retweets_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_retweet"
            android:rotation="62"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:alpha="0.1"/>

        <TextView
            android:id="@+id/tags_chart_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/retweet_stats_title"
            android:padding="5dp"
            android:textColor="@color/light"
            android:fontFamily="@font/raleway_medium"/>

        <RelativeLayout
            android:id="@+id/retweets_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_below="@id/tags_chart_title">

            <RelativeLayout
                android:id="@+id/perc_container"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/retweets_p_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0%"
                    android:textSize="35sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/retweets_p_tv"
                    android:text="@string/retweet_perc_label"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="5dp"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/ret_dist_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retweet_dist_chart_title"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_below="@id/perc_container"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retweet_dist_chart_yaxis"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="100dp"
                android:layout_marginStart="-25dp"
                android:gravity="center"
                android:rotation="270"
                android:layout_below="@id/ret_dist_title"/>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/retweets_chart"
                android:layout_marginTop="5dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/ret_dist_title"/>


        </RelativeLayout>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/retweets_avi"
            android:layout_width="50dp"
            android:layout_height="50dp"
            style="@style/AVLoadingIndicatorView"
            android:visibility="visible"
            app:indicatorName="BallPulseIndicator"
            android:layout_centerInParent="true"
            app:indicatorColor="@color/colorPrimaryDark"/>


    </RelativeLayout>

</android.support.v7.widget.CardView>