<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@mipmap/social" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/img"
        android:layout_margin="10dp"
        android:text="@string/instagram_login_title"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/instagram_login_description"
        android:layout_below="@id/title"
        android:textAlignment="center"/>

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/img"
        android:layout_alignBottom="@id/body"
        android:visibility="invisible" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:layout_width="50dp"
        android:layout_height="50dp"
        style="@style/AVLoadingIndicatorView"
        android:visibility="invisible"
        app:indicatorName="BallPulseIndicator"
        android:layout_centerInParent="true"
        app:indicatorColor="@color/colorPrimaryDark"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@id/img"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/connected_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:text="Connected as"/>

        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <com.dd.morphingbutton.MorphingButton
        android:id="@+id/grant_permission_button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/grant_permissions"
        android:textColor="@color/light"
        android:layout_marginTop="16dp"/>


</RelativeLayout>